# MathUtils-CPP

./: CMakeLists.txt  MathUtils-config.cmake.in  README.md
CMakeUtil/: Component.cmake  TestingFramework.cmake
Time/: CMakeLists.txt
Time/include/MathUtils/Time/: Time.h
Time/test/: CMakeLists.txt  main.cpp  time_tests.cpp
Vector/: CMakeLists.txt
Vector/include/MathUtils/Vector/: Matrix.h  Vector.h
Vector/test/: CMakeLists.txt  matrix_tests.cpp  vector_tests.cpp
